--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -937,6 +937,10 @@ code: |
 objects:
   - users[i].fee_waiver_ead: ALDocument.using(title=f"{users[i]} - Fee Waiver Request", filename=space_to_underscore(f"{users[i]} - Fee Waiver Request"), has_addendum=False)
 ---
+objects:
+  - users[i].cover_page: ALDocument.using(title=f"Cover Page", filename="cover_page", has_addendum=False, enabled=True)
+  - users[i].ending_page: ALDocument.using(title=f"Ending Page", filename="ending_page", has_addendum=False, enabled=True)
+---
 code: |
   users[i].fee_waiver_ead.enabled = users[i].application_is_approved and application_kind == "ead_only"
 ---
@@ -949,6 +953,7 @@ code: |
 objects:
   - al_user_bundle: ALDocumentBundle.using(title="All documents to print and file", filename="all_documents", enabled=True, elements=[])
   - users[i].document_bundle: ALDocumentBundle.using(title=f"{users[i]} - All documents to print and file", filename=space_to_underscore(f"{users[i]} - all_documents"), enabled=True, elements=[
+        users[i].cover_page,
         users[i].ead_legal_screener,
         users[i].tps_legal_screener,
         users[i].limited_scope_retainer,
@@ -964,6 +969,7 @@ objects:
         users[i].i_765_attachment,
         users[i].ead_interim_parole_addendum,
         users[i].fee_waiver_ead,
+        users[i].ending_page,
       ])
 ---
 code: |
@@ -1126,3 +1132,21 @@ code: |
     country_names.insert(0, "Venezuela")
     return country_names
 
+---
+attachment:
+  variable name: users[i].cover_page[j]
+  name: Cover Page
+  filename: cover_page
+  pdf template file: cover_page.pdf
+  skip undefined: True
+  fields:
+    - "document_set_for": ${ users[i].name.full(middle="full") }
+---
+attachment:
+  variable name: users[i].ending_page[j]
+  name: Ending Page
+  filename: ending_page
+  pdf template file: ending_page.pdf
+  skip undefined: True
+  fields:
+    - "document_set_for": ${ users[i].name.full(middle="full") }
