--- a/docassemble/USCISApplications/data/questions/screeners.yml
+++ b/docassemble/USCISApplications/data/questions/screeners.yml
@@ -391,7 +391,7 @@ fields:
     show if: users[i].children_entered_separately
     default: |
       ${ showifdef("users[0].children_entered_separately_explanation") if i > 0 else '' }
-  - Did you travel through Central America before entering the US?: users[i].traveled_through_central_america
+  - Did you travel through Central America (Colombia, Panama, Costa Rica, Nicaragua, Honduras, Guatemala, and Mexico) before entering the US?: users[i].traveled_through_central_america
     datatype: yesnoradio
     default: |
       ${ showifdef("users[0].traveled_through_central_america") if i > 0 else '' }
@@ -399,11 +399,11 @@ fields:
     datatype: yesnoradio
     default: |
       ${ showifdef("users[0].traveled_through_other_countries") if i > 0 else '' }
-  - note: |
-      For now, this interview will only create an addendum about travel through Central America.
-      You may want to hand-edit the list of countries traveled through
-      and legal status in each country in the addendum or on form 821.
+  - Which countries? (list all countries, incuding those in South America, with a comma between each country): users[i].other_countries_traveled_through
+    datatype: area
     show if: users[i].traveled_through_other_countries
+    default: |
+      ${ showifdef("users[0].countries_traveled_through") if i > 0 else '' }
   - First country you are a citizen of: users[i].countries_of_citizenship[0]
     code: uscis_countries_list()
     default: ${ users[i].country_of_birth }
