--- a/docassemble/USCISApplications/data/questions/main.yml
+++ b/docassemble/USCISApplications/data/questions/main.yml
@@ -339,6 +339,7 @@ fields:
       uscis_countries_list()
   - Birthdate: users[0].birthdate
     datatype: BirthDate
+    alMax: ${ today().format("yyyy-MM-dd") }
   - A Number (do not include A-): users[0].a_number
     required: False
     validate: |
@@ -381,6 +382,7 @@ fields:
   - State/Province of birth: users[i].state_of_birth  
   - Birthdate: users[i].birthdate
     datatype: BirthDate
+    alMax: ${ today().format("yyyy-MM-dd") }
   - A Number (do not include A-): users[i].a_number
     required: False
     validate: |
@@ -482,7 +484,7 @@ question: |
   What kind of application will this family complete?
 field: application_kind
 buttons:
-  - TPS: ead_and_tps
+  - TPS and EAD: ead_and_tps
     image: shield-halved
   - EAD via parole only: ead_only
     image: briefcase
